# qstatic_diag

./: LICENSE  README.md  pyproject.toml
configs/: default.yaml  resnet_demo.yaml  transformer_demo.yaml
scripts/: demo_cnn.py
src/qstatic_diag/: __init__.py
src/qstatic_diag/cli/: main.py
src/qstatic_diag/data/: __init__.py  sampling.py
src/qstatic_diag/diagnostics/: __init__.py  blockdiag.py  corrdiag.py  flame.py  laydiag.py  pipeline.py
src/qstatic_diag/divergence/: __init__.py  ifd.py
src/qstatic_diag/evaluation/: __init__.py  baselines.py  experiments.py
src/qstatic_diag/models/: __init__.py  zoo.py
src/qstatic_diag/reporting/: __init__.py  export.py
src/qstatic_diag/stats/: __init__.py  confidence.py
src/qstatic_diag/tracing/: __init__.py  hooks.py  topology.py
src/qstatic_diag/utils/: __init__.py  logging.py  seed.py  types.py
src/qstatic_diag/visualization/: __init__.py  plots.py
